# viral-content-machine-v2

./: .env  DIAGNOSTIC_REPORT.md  GAP_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  README.md  V3_IMPLEMENTATION_SUMMARY.md  diagnostic_output.txt  main.py  pyproject.toml  requirements.txt  supabase_schema.sql  test_actor_critic.py
.crewai_storage/: .crewai_user.json  latest_kickoff_task_outputs.db
agents/: insights_fetcher.py  self_improve.py  social_listener.py
agents/critic_agent/: critic_agent.py  critic_agent_v3.py
agents/hook_agent/: hook_agent.py
agents/script_agent/: __init__.py  script_agent.py
agents/trend_agent/: engine.py  tasks.py  trend_engine.py
chroma_db/: chroma.sqlite3
database/: hook_library.py
memory/: database.py
orchestrator/: generation_engine.py
schemas/: models.py
scrapers/: google_trends.py  reddit_scraper.py
