[project]
name = "viral-content-machine-v2"
version = "0.1.0"
description = "A multi-agent architecture for generating viral content."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai[google-genai]",
  "langchain-google-genai",
  "supabase",
  "pydantic",
  "python-dotenv",
  "langchain-openai",
  "openai",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
